corrected the remove icon and array alignment

--- a/frontend/micro-ui/web/micro-ui-internals/packages/css/src/digitv2/pages/employee/workbench.scss
+++ b/frontend/micro-ui/web/micro-ui-internals/packages/css/src/digitv2/pages/employee/workbench.scss
@@ -14,6 +14,7 @@
       .field-wrapper {
         .form-group.field {
           display: flex;
+          padding:1em 0 0 1em;
 
           &.field-error.has-error.has-danger {
             .control-label {
@@ -166,8 +167,8 @@
 
               .array-remove-button-wrapper {
                 position: absolute;
-                right: 0.8rem;
-                top: 0.7rem;
+                right: 1.3em;
+                top: 1.3em;
                 background-color: inherit !important;
 
                 .array-remove-button {
